out.txt
parse.c:5:9: error: macro names must be identifiers
 #ifndef "newsblock.h"
         ^~~~~~~~~~~~~
parse.c:5:0: error: unterminated #ifndef
 #ifndef "newsblock.h"
 
newsblock.c:3:9: error: macro names must be identifiers
 #ifndef "newsblock.h"
         ^~~~~~~~~~~~~
newsblock.c:3:0: error: unterminated #ifndef
 #ifndef "newsblock.h"
 
